force-app/main/default/objects/Tea_Variety__c/Tea_Variety__c.object-meta.xml
<CustomObject>
    <label>Tea Variety</label>
    <nameField>
        <label>Tea Variety Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tea Varieties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>