force-app/main/default/objects/Tea_Variety__c/fields/Body_Feel__c.field-meta.xml
<CustomField>
    <fullName>Body_Feel__c</fullName>
    <label>Body Feel</label>
    <type>TextArea</type>
</CustomField>