force-app/main/default/objects/Tea_Variety__c/fields/Dry_Leaf__c.field-meta.xml
<CustomField>
    <fullName>Dry_Leaf__c</fullName>
    <label>Dry Leaf</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>