force-app/main/default/objects/Tea_Variety__c/fields/First_Infusion__c.field-meta.xml
<CustomField>
    <fullName>First_Infusion__c</fullName>
    <label>First Infusion (seconds)</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>