force-app/main/default/objects/Tea_Variety__c/fields/Infusions_Increase_By__c.field-meta.xml
<CustomField>
    <fullName>Infusions_Increase_By__c</fullName>
    <description>How many seconds longer each infusion is than the last</description>
    <inlineHelpText>How many seconds longer each infusion is than the last</inlineHelpText>
    <label>Infusions Increase By (seconds)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>