force-app/main/default/objects/Tea_Variety__c/fields/Liquor__c.field-meta.xml
<CustomField>
    <fullName>Liquor__c</fullName>
    <label>Liquor</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>