force-app/main/default/objects/Tea_Variety__c/fields/Number_of_Infusions__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Infusions__c</fullName>
    <label>Number of Infusions</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>