force-app/main/default/objects/Tea_Variety__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <description>Rating (0-5) for this variety</description>
    <inlineHelpText>Rating (0-5) for this variety</inlineHelpText>
    <label>Rating</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>