force-app/main/default/objects/Tea_Variety__c/fields/Tea_Seller__c.field-meta.xml
<CustomField>
    <fullName>Tea_Seller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tea Seller</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Tea Varieties</relationshipLabel>
    <relationshipName>Tea_Varieties</relationshipName>
    <type>Lookup</type>
</CustomField>