force-app/main/default/objects/Tea_Variety__c/fields/Tea_Weight_g__c.field-meta.xml
<CustomField>
    <fullName>Tea_Weight_g__c</fullName>
    <label>Tea Weight (g)</label>
    <precision>4</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>