force-app/main/default/objects/Tea_Variety__c/fields/Temperature_Unit__c.field-meta.xml
<CustomField>
    <fullName>Temperature_Unit__c</fullName>
    <label>Temperature Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>° F</fullName>
                <default>true</default>
                <label>° F</label>
            </value>
            <value>
                <fullName>° C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>