force-app/main/default/objects/Tea_Variety__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Oolong</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Pu&apos;er</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>