force-app/main/default/objects/Tea_Variety__c/fields/Use_Simple_Brewing_Steps__c.field-meta.xml
<CustomField>
    <fullName>Use_Simple_Brewing_Steps__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Use Simple Brewing Steps</label>
    <type>Checkbox</type>
</CustomField>