force-app/main/default/objects/Tea_Variety__c/fields/Water_Temperature__c.field-meta.xml
<CustomField>
    <fullName>Water_Temperature__c</fullName>
    <label>Water Temperature</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>