force-app/main/default/objects/Tea_Variety__c/fields/Water_Volume_ml__c.field-meta.xml
<CustomField>
    <fullName>Water_Volume_ml__c</fullName>
    <label>Water Volume (ml)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>